--- a/index.html
+++ b/index.html
@@ -12,6 +12,21 @@
         }
     </style>
 <body>
-    <h1>Hello World</h1>
+    <main>
+        <h1>Hello World</h1>
+
+        <table>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+        </table>
+        </main>
 </body>
 </html>
