Markup for image in file; table styling

--- a/index.html
+++ b/index.html
@@ -10,12 +10,17 @@
         body {
             background-color: chartreuse;
         }
+        table {
+            width: 150px;
+        }
     </style>
 <body>
     <main>
         <h1>Hello World</h1>
+        <div id="image_box">
+        <img src="pexels-pixabay-161702.jpg" alt="Picture of a spherical rock">
 
-        <table>
+        <table border="black">
             <tr>
                 <td></td>
                 <td></td>
@@ -27,6 +32,7 @@
                 <td></td>
             </tr>
         </table>
+        </div>
         </main>
 </body>
 </html>
